port: backport recipe manager and JEI APIs to 1.20.1